--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,13 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
+.card {
+  background-color: orangered;
+  height: 50rem;
+  transition: all 0.8s; }
+  .card:hover {
+    transform: rotateY(180deg); }
+
 .btn {
   /* :link is a pseudo-class, and pseudo-classes are a special state of a selector.
   So this link here is a state of the button selector.
@@ -328,3 +335,8 @@ body {
   transform: skewY(-7deg); }
   .section-features > * {
     transform: skewY(7deg); }
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem; }
