--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "base/typography";
 @import "base/utilities";
 
+//order matters 
+@import "components/card";
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
