--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -24,3 +24,9 @@
 }
 
 //.section-feature * : will select all the children, not direct children.
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem;
+}
