--- a/css/style.css
+++ b/css/style.css
@@ -127,13 +127,6 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
-.card {
-  background-color: orangered;
-  height: 50rem;
-  transition: all 0.8s; }
-  .card:hover {
-    transform: rotateY(180deg); }
-
 .btn {
   /* :link is a pseudo-class, and pseudo-classes are a special state of a selector.
   So this link here is a state of the button selector.
@@ -266,6 +259,34 @@ body {
     color: transparent; }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  .card__side {
+    color: #fff;
+    font-size: 2rem;
+    height: 50rem;
+    transition: all 0.8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+  .card:hover .card__side--front {
+    transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
 
 .row {
   max-width: 114rem;
