--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,14 +2,43 @@
   perspective: 150rem;
   //to make it work in firefox
   -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; /// height collasped when backface-visibility is used.
 
   &__side {
-    background-color: orangered;
+    color: #fff;
+    font-size: 2rem;
     height: 50rem;
-    transition: all 0.8s;
+    transition: all 0.8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden; // hides the back part of the element but makes the height collaspe
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+    &--front {
+      background-color: $color-white;
+    }
+
+    &--back {
+      transform: rotateY(180deg);
+
+      &-1 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        );
+      }
+    }
   }
 
-  &:hover &__side {
+  &:hover &__side--front {
     transform: rotateY(180deg);
+  }
+  &:hover &__side--back {
+    transform: rotateY(0);
   }
 }
