--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,6 +12,7 @@
   background-size: cover;
   background-position: top;
   position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
   /* 40px from the parent element; parent element is the reference which has its position set to relative */
