--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,7 +2,7 @@
   width: 75%;
   margin: 0 auto; // block inside block
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
-  background-color: $color-white;
+  background-color: rgba($color-white, 0.5);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
@@ -34,7 +34,6 @@
   &__text {
     transform: skewX(12deg);
     backface-visibility: hidden;
-
   }
 
   &__caption {
@@ -49,21 +48,17 @@
     opacity: 0;
     transition: all 0.5s;
     backface-visibility: hidden;
-    
   }
 
   &:hover &__caption {
     opacity: 1;
     transform: translate(-50%, -50%);
     backface-visibility: hidden;
-
-
   }
 
   &:hover &__img {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%);
     backface-visibility: hidden;
-
   }
 }
