--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -32,7 +32,8 @@
 }
 
 .section-stories {
-  background-color: $color-grey-light-1;
-
+  position: relative;
+  // background-color: $color-grey-light-1;
+  // margin-top: -10rem;
   padding: 15rem 0;
 }
