--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -7,6 +7,11 @@
   background-color: rgba($color-black, 0.8);
   z-index: 10000;
 
+  opacity: 0;
+  visibility: hidden;
+
+  transition: all 0.3s;
+
   &__content {
     @include absCenter;
     width: 75%;
@@ -15,6 +20,9 @@
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s;
   }
 
   &__left {
@@ -50,5 +58,35 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  // Open States
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute; // it will be positioned to its first positioned parent// it will positioned relative to popup__content
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all 0.2s;
+      line-height: 1; // it was text and had a predefined line-height
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
