--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,8 +14,23 @@
 /* percentage of the font size given by the browser (usually 16px => that's why 62.5%) that is 10 px*/
 /* rem not supported by internet explorer 9 and below */
 html {
-    // This defines what 1rem is
-  font-size: 62.5%;
+  // This defines what 1rem is
+  font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+
+  // @include respond(phone){
+  //   font-size: 50%;
+  // }
+  @include respond(tab-land) {
+    // width < 1200
+    font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+  }
+  @include respond(tab-port) {
+    // width < 900
+    font-size: 50%; // 1 rem = 8px, 8/16 = 50%
+  }
+  @include respond(big-desktop) {
+    font-size: 75%; // 1 rem = 12px, 12/16 = 75%
+  }
 }
 
 /* Project-wide font definitions */
