--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,6 @@ body {
   color: $color-grey-dark;
   /* this is not the case of inheritance because padding is not getting inherited.
     All that's happening is it's applying a 30px padding around the entire body */
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -38,6 +37,11 @@ body {
     animation-timing-function: ease-out;
     /* animation-iteration-count: 3; */
     /* animation-delay: 3s; */
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -47,6 +51,10 @@ body {
     letter-spacing: 1.74rem;
 
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -64,6 +72,14 @@ body {
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+
+  @include respond(tab-port){
+    font-size: 3rem;
+  }
+
+  @include respond(phone){
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
