--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,6 +15,11 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
+  @include respond(phone) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+
   /* 40px from the parent element; parent element is the reference which has its position set to relative */
   &__logo-box {
     position: absolute;
