--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,6 +15,15 @@
     box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
     text-align: center;
     cursor: pointer;
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+    @include respond(phone){
+      top: 3rem;
+      right: 3rem;
+    }
   }
 
   &__background {
@@ -31,6 +40,15 @@
     z-index: 1000;
     transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     //transform: scale(100);
+
+    @include respond(tab-port) {
+      top: 4.5rem;
+      right: 4.5rem;
+    }
+    @include respond(phone) {
+      top: 3.5rem;
+      right: 3.5rem;
+    }
   }
 
   &__nav {
@@ -139,14 +157,14 @@
     top: 1rem;
   }
 
-  &__checkbox:checked + &__button &__icon{
+  &__checkbox:checked + &__button &__icon {
     background-color: transparent;
   }
-  &__checkbox:checked + &__button &__icon::before{
+  &__checkbox:checked + &__button &__icon::before {
     transform: rotate(135deg);
     top: 0;
   }
-  &__checkbox:checked + &__button &__icon::after{
+  &__checkbox:checked + &__button &__icon::after {
     transform: rotate(-135deg);
     top: 0;
   }
