--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -4,6 +4,10 @@
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 5rem !important;
+  }
 }
 .u-margin-top-big {
   margin-top: 8rem !important;
@@ -18,4 +22,8 @@
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 3rem !important;
+  }
 }
