--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-port){
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -21,6 +25,10 @@
   & > * {
     transform: skewY(7deg);
   }
+
+  @include respond(tab-port){
+    padding: 10rem 0;
+  }
 }
 
 //.section-feature * : will select all the children, not direct children.
@@ -29,6 +37,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+
+  @include respond(tab-port){
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
@@ -36,6 +48,10 @@
   // background-color: $color-grey-light-1;
   // margin-top: -10rem;
   padding: 15rem 0;
+
+  @include respond(tab-port){
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
@@ -45,6 +61,10 @@
     $color-primary-light,
     $color-primary-dark
   );
+
+  @include respond(tab-port){
+    padding: 10rem 0;
+  }
 }
 
 .book {
