--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -10,6 +10,16 @@
   transform: skewX(-12deg);
   backface-visibility: hidden;
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -22,6 +32,10 @@
 
     transform: translateX(-3rem) skewX(12deg); // to add space (margins not used as this is a float element)
     position: relative;
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__img {
@@ -33,7 +47,10 @@
 
   &__text {
     transform: skewX(12deg);
-    backface-visibility: hidden;
+
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
