--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,7 +3,7 @@
   padding: 25rem 0;
   margin-top: -20vh;
 
-  @include respond(tab-port){
+  @include respond(tab-port) {
     padding: 20rem 0;
   }
 }
@@ -26,7 +26,7 @@
     transform: skewY(7deg);
   }
 
-  @include respond(tab-port){
+  @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
@@ -38,7 +38,7 @@
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
 
-  @include respond(tab-port){
+  @include respond(tab-port) {
     padding: 20rem 0 10rem 0;
   }
 }
@@ -49,7 +49,7 @@
   // margin-top: -10rem;
   padding: 15rem 0;
 
-  @include respond(tab-port){
+  @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
@@ -62,7 +62,7 @@
     $color-primary-dark
   );
 
-  @include respond(tab-port){
+  @include respond(tab-port) {
     padding: 10rem 0;
   }
 }
@@ -78,11 +78,36 @@
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
-  height: 50rem;
+  // height: 50rem;
 
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 65%,
+        transparent 65%
+      ),
+      url(../img/nat-10.jpg);
+    background-size: cover;
+  }
 
-  &__form{
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%),
+      url(../img/nat-10.jpg);
+  }
+
+  &__form {
     width: 50%;
     padding: 6rem;
+
+    @include respond(tab-land) {
+      width: 65%;
+    }
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
