--- a/css/style.css
+++ b/css/style.css
@@ -747,7 +747,7 @@ body {
 .header {
   /* at every point the height of this box is 95% of viewport height.*/
   height: 95vh;
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
   /* whatever the width of the viewport or the element, it'll always try to fit the element inside of the box */
   background-size: cover;
   background-position: top;
@@ -756,6 +756,9 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   /* 40px from the parent element; parent element is the reference which has its position set to relative */
   /* width will get automatically decided by the browser */ }
+  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+    .header {
+      background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg); } }
   @media (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
